# drowAI

./: .dockerignore  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.frontend  MAINTAINING.md  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  env.example  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/: pull_request_template.md
agent/: __init__.py  config.py  environment_validator.py  execution_strategy.py  executor.py  logger.py  models.py  planner.py  scope_validator.py  workspace_init.py
backend/: README.md  alembic.ini  auth.py  config_bootstrap.py  database.py  main.py
core/: __init__.py  tool_capability_taxonomy.py  tool_category_taxonomy.py
deploy/: README.md  __init__.py  env_contract.py
docs/: logging.md
drowai_runner/: __init__.py  __main__.py  app.py  artifact_manifest.py  artifact_uploader.py  capacity.py  cleanup.py  cloud_client.py  cloud_config.py  config.py  configure.py  credentials.py  docker_runtime.py  environment.py  file_comm_bridge.py  health.py  heartbeat.py  job_store.py  lifecycle_operations.py  logging.py  logs_metrics.py  operation_service.py  protocol_handler.py  pty_command_transport.py  runtime_image.py  terminal_proxy.py  tool_command_models.py  tool_command_operations.py  workspace.py
e2e/: playwright.config.ts
kali_executor/: __init__.py  executor_daemon.py
runtime_shared/: __init__.py  docker_contracts.py  docker_network_manager.py  environment_info.py  file_comm_contracts.py  metrics.py  runner_protocol.py  runtime_image_contract.py  runtime_manifest.py  runtime_network.py  terminal_contracts.py  terminal_manager_port.py  tool_command_transport.py  vpn_observability.py  workspace_bind_paths.py  workspace_files.py  workspace_filesystem.py  workspace_write_mode.py
scripts/: build_runner_image.py  build_runtime_image.py  check_publication_safety.py  check_version_consistency.py  e2e_seed.py  generate_test_inventory.py  local_dev.py  local_postgres_bootstrap.py  local_production_cloud.py  package_execution_site.py  package_runner.py  run_cutover_certification.py  run_langgraph_prompt_mock_suite.py  run_langgraph_regression_suite.py  run_release_gate.py  verify_runtime_package.py
tests/: run_phase2_3_tests.py  run_regression_suite.py  run_tool_tests.py  run_web_tools_tests.py  test_action_mapper.py  test_catalog_builder.py  test_checkpoint_setup.py  test_complete_file_upload_fix.py  test_complete_workspace_isolation.py  test_completion_report_fix.py  test_comprehensive_tool_schema_validation.py  test_durable_secret_masking.py  test_enhanced_command_executor.py  test_enhanced_metadata.py  test_enhanced_metadata_registry.py  test_enhanced_planner.py  test_enhanced_tool_metadata.py  test_executor_enhanced_integration.py  (+22 more)
(+3467 files in other folders)
